src/test/InvalidSuper/InvalidSuper.panda
class Test {
    constructor() {
        super()
    }

    function one():Bit {
        return super = self
    }

    function two(t:Test):Bit {
        return super.hash-?>Int
    }

    function three(t:Test):Bit {
        return true
    }

    function four():Bit {
        return two(super)
    }

    @class
    method main() {
        Console.writeLine(super)
        Console.writeLine(super.hash)
    }
}