src/test/InvalidSuper/InvalidSuper.expected
error: InvalidSuper.panda:3:9: 'super' is not a method
error: InvalidSuper.panda:7:16: 'super' is not valid in this context
error: InvalidSuper.panda:19:20: 'super' is not valid in this context
error: InvalidSuper.panda:24:27: 'super' is not valid in this context
error: InvalidSuper.panda:25:32: unknown identifier
5 errors
